fix logo align left 4em

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 #logo {
-    margin-left: 3em;
+    margin-left: 4em;
     width: 1.5em;
 }
 
